--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.2.2",
+    "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
+    "contentful": "^7.0.4",
+    "material-ui-icons": "^1.0.0-beta.36",
+    "mdbreact": "^4.8.1",
     "react": "^16.5.2",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^1.7.0",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "stop": "taskkill -F -IM node.exe",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
