--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "contentful": "^7.0.4",
+    "material-ui": "^1.0.0-beta.47",
+    "material-ui-datetimepicker": "^1.0.7",
     "material-ui-icons": "^1.0.0-beta.36",
     "mdbreact": "^4.8.1",
     "react": "^16.5.2",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-datepicker": "^1.7.0",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
     "react-scripts": "2.0.5",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +36,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "redux-devtools": "^3.4.1"
+  }
 }
